landing pag with nav

--- a/index.html
+++ b/index.html
@@ -25,11 +25,41 @@
         <div class="main">
             <a href="" class="user"><i class='bx bxs-user' ></i>Sign In</a>
             <a href="">Get Started</a>
-            <div class="bx bx-menu" id="menu-icon"></div>
+            <div class="bx bx-menu" id="menu-icon" class="nav__btn"></div>
         </div>
     </header>
-
-
+        <!--Landing Page section-->
+        <section class="container">
+            <div class="content__container">
+                <h1>Create Websites<br>
+                    <span class="heading__1">for your</span><br>
+                    <span class="heading__2">Customers</span>
+                </h1>
+                <p>
+                    Creating websites for customers involves a dynamic process that begins with understanding their unique needs, 
+                    objectives, and target audience. It entails comprehensive consultations
+                    to conceptualize the design, layout, and functionalities desired. 
+                    From crafting user-friendly interfaces to integrating responsive designs and 
+                    optimizing for search engines, each step requires meticulous attention to detail. 
+                </p>
+                <form>
+                    <button type="submit" >Chat us!</button>
+                </form>
+            </div>
+            <div class="image__container">
+                <img src="image/header1.png" alt="headerImage">
+                <img src="image/header2.png" alt="headerImage">
+                <div class="image__content">
+                    <ul>
+                        <li>Get 30% off when you chat us!</li>
+                        <li>Amazing Website Creators</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!--<a href="http://www.freepik.com">Designed by stories / Freepik</a> 
+            <a href="http://www.freepik.com">Designed by Freepik</a>
+        -->
     <!-- js-->
     <script type="text/javascript" src="js/script.js"></script>
 
