landing page with navbar fix css and html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="content__container">
                 <h1>Create Websites<br>
                     <span class="heading__1">for your</span><br>
-                    <span class="heading__2">Customers</span>
+                    <span class="heading__2">Customers!</span>
                 </h1>
                 <p>
                     Creating websites for customers involves a dynamic process that begins with understanding their unique needs, 
