changes in the html for the navbar when click

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <!--NavBar-->
     <header>
-        <a href="#" class="logo"><i class='bx bx-layer' ></i><span>LAC</span></a>
+        <a href="index.html" class="logo"><i class='bx bx-layer' ></i><span>LAC</span></a>
         <ul class="navbar">
-            <li><a href="" class="active">Home</a></li>
-            <li><a href="">About Us</a></li>
-            <li><a href="">Services</a></li>
+            <li><a href="#page1" class="active">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#page2">Services</a></li>
             <li><a href="">Blog</a></li>
             <li><a href="">Contact</a></li>
         </ul>
@@ -29,7 +29,7 @@
         </div>
     </header>
         <!--Landing Page section-->
-        <section class="container">
+        <section id="page1" class="container">
             <div class="content__container">
                 <h1>Create Websites<br>
                     <span class="heading__1">for your</span><br>
@@ -61,7 +61,7 @@
             <a href="http://www.freepik.com">Designed by Freepik</a>
         -->
 
-        <div class="container_features">
+        <div id="page2" class="container_features">
             <h1>Our Services</h1>
            <div class="row">
             <div class="service">
