new changes in the html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="index.html" class="logo"><i class='bx bx-layer' ></i><span>LAC</span></a>
         <ul class="navbar">
             <li><a href="#page1" class="active">Home</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="#about">About Us</a></li>
             <li><a href="#page2">Services</a></li>
             <li><a href="">Blog</a></li>
             <li><a href="">Contact</a></li>
@@ -60,7 +60,27 @@
         <!--<a href="http://www.freepik.com">Designed by stories / Freepik</a> 
             <a href="http://www.freepik.com">Designed by Freepik</a>
         -->
+            <!--About section-->
+            <section class="about" id="about">
+                <div class="main-about">
+                    <img src="image/image1.png" alt="">
+                    <div class="all-text">
+                        <h4>About Us</h4>
+                        <h1>Custom Web Solutions for Success</h1>
+                        <p>At LAC Web Design & Development, we specialize in crafting stunning and 
+                            functional websites tailored to meet our clients' unique needs. 
+                            With a dedicated team of designers and developers, 
+                            we strive to deliver cutting-edge solutions that elevate our clients'
+                             online presence and drive their success in the digital realm.</p>
+                             <div class="btn-about">
+                                <button type="button">Our Team</button>
+                                <button type="button" class="btn2">Learn More</button>
 
+                             </div>
+                    </div>
+                </div>
+            </section>
+            <!--Features/Services section-->
         <div id="page2" class="container_features">
             <h1>Our Services</h1>
            <div class="row">
