update with html and css new changes

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
         <div class="blog-content">
           <div class="card">
             <img src="image/react.png" alt="" />
-            <p class="text-title">The ReactJS <span>-February7, 2024</span></p>
-            <h4>Loren ipsum dolor sit amet</h4>
+            <p class="text-title">ReactJS <span>- February1, 2024</span></p>
+            <h4>Unlocking the Potential of ReactJS</h4>
             <p>
               ReactJS: A powerful JavaScript library by Facebook for building
               efficient, reusable user interfaces effortlessly, revolutionizing
@@ -188,19 +188,19 @@
           </div>
           <div class="card">
             <img src="image/Tailwind.png" alt="" />
-            <p class="text-title">TailwindCSS<span>-February8, 2024</span></p>
-            <h4>Loren ipsum dolor sit amet</h4>
+            <p class="text-title">TailwindCSS<span>- February2, 2024</span></p>
+            <h4>Unleashing the Power of Tailwind CSS</h4>
             <p>
-              "Tailwind CSS: A utility-first CSS framework that streamlines the
+              Tailwind CSS: A utility-first CSS framework that streamlines the
               process of building efficient and reusable user interfaces with
-              its simple and intuitive approach."
+              its simple and intuitive approach.
             </p>
             <a href="" class="button-blog">Read More</a>
           </div>
           <div class="card">
             <img src="image/nextjs.png" alt="" />
-            <p class="text-title">NextJS<span>-February10, 2024</span></p>
-            <h4>Loren ipsum dolor sit amet</h4>
+            <p class="text-title">NextJS<span>- February5, 2024</span></p>
+            <h4>Unlocking the Potential of Next.js</h4>
             <p>
               Next.js: A powerful React framework that simplifies building
               efficient and dynamic web applications with server-side rendering
