update with html with contact page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><a href="#about">About Us</a></li>
         <li><a href="#features">Services</a></li>
         <li><a href="#blog">Blog</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="#contact_id">Contact</a></li>
       </ul>
       <div class="main">
         <a href="" class="user"><i class="bx bxs-user"></i>Sign In</a>
@@ -211,6 +211,58 @@
         </div>
       </div>
     </div>
+    <!--Contact Page-->
+    <section id="contact_id" class="body-section">
+      <div class="container_contact">
+        <div class="content_contact">
+          <div class="left-side">
+            <div class="address details">
+              <i class="bx bxs-map"></i>
+              <div class="topic">Address</div>
+              <div class="text-one">123 Manila St</div>
+              <div class="text-two">Manila City</div>
+            </div>
+            <div class="phone details">
+              <i class="bx bxs-phone"></i>
+              <div class="topic">Phone</div>
+              <div class="text-one">+63955092658</div>
+              <div class="text-two">+0260186293</div>
+            </div>
+            <div class="email details">
+              <i class="bx bxs-envelope"></i>
+              <div class="topic">Email</div>
+              <div class="text-one">lac111@gmail.com</div>
+              <div class="text-two">lac222@gmail.com</div>
+            </div>
+          </div>
+          <div class="right-side">
+            <div class="topic-text">Send us a message</div>
+            <p>
+              If you have questions from my websites, you can send me a message
+              from here. It's my pleasure to help you.
+            </p>
+            <form action="#">
+              <div class="input-box">
+                <input type="text" class="type" placeholder="Enter your Name" />
+              </div>
+              <div class="input-box">
+                <input
+                  type="text"
+                  class="type"
+                  placeholder="Enter your email"
+                />
+              </div>
+              <div class="input-box message-box">
+                <textarea></textarea>
+              </div>
+              <div class="button-contact">
+                <input type="button" value="Send Now" />
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- js-->
     <script type="text/javascript" src="js/script.js"></script>
   </body>
