update with the html and js auto type animation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practice</title>
+    <title>Landing Page Website</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
@@ -44,11 +44,11 @@
       <div class="content__container">
         <h1>
           Create Websites<br />
-          <span class="heading__1">for your</span><br />
-          <span class="heading__2">Customers!</span>
+          <span class="heading__1">for your</span>
+          <span class="heading__2"></span>
         </h1>
         <p>
-          Creating websites for customers involves a dynamic process that begins
+          Creating websites for anyone involves a dynamic process that begins
           with understanding their unique needs, objectives, and target
           audience. It entails comprehensive consultations to conceptualize the
           design, layout, and functionalities desired. From crafting
@@ -264,6 +264,8 @@
       </div>
     </section>
     <!-- js-->
+    <!-- js-->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
