footer with html/css

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="bx bx-menu" id="menu-icon" class="nav__btn"></div>
       </div>
     </header>
-    <!--Home/Landing Page section-->
+    <!--Home/Landing Page-->
     <section id="landing-page" class="container">
       <div class="content__container">
         <h1>
@@ -73,7 +73,7 @@
         </div>
       </div>
     </section>
-    <!--About Us section-->
+    <!--About Us-->
     <section class="about" id="about">
       <div class="main-about">
         <img src="image/image1.png" alt="" />
@@ -94,7 +94,7 @@
         </div>
       </div>
     </section>
-    <!--Features/Services section-->
+    <!--Features/Services-->
     <div id="features" class="container_features">
       <h1>Our Services</h1>
       <div class="row">
@@ -211,7 +211,7 @@
         </div>
       </div>
     </div>
-    <!--Contact Page-->
+    <!--Contact-->
     <section id="contact_id" class="body-section">
       <div class="container_contact">
         <div class="content_contact">
@@ -263,7 +263,34 @@
         </div>
       </div>
     </section>
-    <!-- js-->
+    <!--Footer-->
+    <footer>
+      <div class="footerContainer">
+        <div class="socialIcons">
+          <a href=""><i class="ri-facebook-fill"></i></a>
+          <a href=""><i class="ri-instagram-fill"></i></a>
+          <a href=""><i class="ri-twitter-fill"></i></a>
+          <a href=""><i class="ri-linkedin-fill"></i></a>
+          <a href=""><i class="ri-github-fill"></i></a>
+        </div>
+        <div class="footerNav">
+          <ul>
+            <li><a href="#landing-page">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#features">Service</a></li>
+            <li><a href="#blog">Blog</a></li>
+            <li><a href="contact_id">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footerBottom">
+        <p>
+          Copyright &copy;2024; Designed by
+          <span class="designer">Latrell Andrei</span>
+        </p>
+      </div>
+    </footer>
+
     <!-- js-->
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
