minimal changes in the html and image

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <div class="blog-content">
           <div class="card">
             <img src="image/react.png" alt="" />
-            <p class="text-title">ReactJS <span>- February1, 2024</span></p>
+            <p class="text-title">ReactJS <span>- February 1, 2024</span></p>
             <h4>Unlocking the Potential of ReactJS</h4>
             <p>
               ReactJS: A powerful JavaScript library by Facebook for building
@@ -187,8 +187,8 @@
             <a href="" class="button-blog">Read More</a>
           </div>
           <div class="card">
-            <img src="image/Tailwind.png" alt="" />
-            <p class="text-title">TailwindCSS<span>- February2, 2024</span></p>
+            <img src="image/tailwind.png" alt="" />
+            <p class="text-title">TailwindCSS<span>- February 2, 2024</span></p>
             <h4>Unleashing the Power of Tailwind CSS</h4>
             <p>
               Tailwind CSS: A utility-first CSS framework that streamlines the
@@ -199,7 +199,7 @@
           </div>
           <div class="card">
             <img src="image/nextjs.png" alt="" />
-            <p class="text-title">NextJS<span>- February5, 2024</span></p>
+            <p class="text-title">NextJS<span>- February 5, 2024</span></p>
             <h4>Unlocking the Potential of Next.js</h4>
             <p>
               Next.js: A powerful React framework that simplifies building
